feat: add possible errors to swagger
